<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/home"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background"
    android:gravity="center"
    android:padding="30dip">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_title"
        android:layout_marginBottom="25dip"
        android:textSize="24.5sp"/>
    <Button
        android:id="@+id/todo_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/my_todos_label" />
    <Button
        android:id="@+id/calendar_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/my_Calendar_label" />
    <Button
        android:id="@+id/notifs_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Notifications_label" />

    <Button
        android:id="@+id/shared_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Shared_Lists_label" />
    <Button
        android:id="@+id/friends_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/My_friends_label" />

</LinearLayout>